package com.directi.training.dip.exercise.sol;

public interface Encoder {

    public String encode(String string);
}
