package com.directi.training.dip.exercise.sol;

import java.io.IOException;

public interface Reader {
    public String read() throws IOException;
}
