package com.directi.training.dip.exercise.sol;

import java.io.IOException;

public interface Writer {

    public int write(String string) throws IOException  ;
}
